add packages for strategy and model